--- a/she_codes_news/templates/nav.html
+++ b/she_codes_news/templates/nav.html
@@ -1,6 +1,9 @@
 <nav>
     <a href="{% url 'news:index' %}">Home</a>
-    <a href="#">username</a>
-    <a href="#">Logout</a>
+    {% if request.user.is_authenticated %}
+        <a href="#">{{ user.username }}</a>
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
     <a href="#">Login</a>
+    {% endif %}
 </nav>
