--- a/she_codes_news/static/styles.css
+++ b/she_codes_news/static/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
 
 body {
-    background-color: #de0614;
+    background-color: #dfc4c6;
 }
 
 header {
@@ -12,7 +12,7 @@ header {
 }
 
 img {
-    filter: grayscale(100%);
+    border-radius: 5px;
 }
 
 h1 {
