--- a/she_codes_news/templates/nav.html
+++ b/she_codes_news/templates/nav.html
@@ -1,9 +1,13 @@
 <nav>
     <a href="{% url 'news:index' %}">Home</a>
     {% if request.user.is_authenticated %}
-        <a href="#">{{ user.username }}</a>
+        <a href="">{{ user.username }}</a>
+        <a href="{% url 'news:newStory' %}">Write New Story</a>
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
-    <a href="#">Login</a>
+    <a href="{% url 'login' %}">Login</a>
     {% endif %}
 </nav>
+
+<!-- login
+https://learndjango.com/tutorials/django-login-and-logout-tutorial -->
