--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -12,34 +12,32 @@
 
 #latest-stories {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 1px 1px;
-    grid-template-areas: "left-1 right-1" "left-1 right-2" "left-1 right-3";
-    max-height: 500px;
+    grid-template-areas: "left-1 right-1" "left-2 right-2" "left-3 right-3";
+    /* max-height: 500px; */
 }
 
-#story-card-1 {
-    grid-area: left-1;
+/* #story-card-1 {
+    grid-area: left-1 right-1;
 }
 
 #story-card-2 {
-    grid-area: right-1;
+    grid-area: left-2 right-2;
 }
 
 #story-card-3 {
-    grid-area: right-2;
+    grid-area: left-3 right-3;
 }
 
 #story-card-4 {
-    grid-area: right-3;
-}
+    grid-area: left-3 right-3;
+} */
 
 #story-card-2 a,
 #story-card-3 a,
 #story-card-4 a {
-    display: flex;
-    max-height: 120px;
     width: 100%;
     height: 100%;
 }
@@ -56,13 +54,13 @@
     font-size: 12px;
 }
 
-#story-card-2 img,
+/* #story-card-2 img,
 #story-card-3 img,
 #story-card-4 img {
     width: 33%;
     height: 100%;
     margin-right: 5px;
-}
+} */
 
 #all-stories {
     display: flex;
@@ -86,5 +84,13 @@
 }
 
 #title {
-    color: crimson;
+    color: var(--dark-font);
+}
+
+@media (min-device-width: 320px) and (max-device-width: 480px){
+    #latest-stories {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+}
 }
