--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -7,6 +7,10 @@
 
 <h2>Latest News</h2>
 
+<div id ="categories">
+    
+</div>
+
     <div id="latest-stories">
         {% if latest_stories %}
             {% for story in latest_stories %}
@@ -17,6 +21,7 @@
         {% endif %}
     </div>
 
+    <h2>All Stories</h2>
     <div id="all-stories">
         {% if latest_stories %}
             {% for story in all_stories %}
