--- a/she_codes_news/users/templates/users/createAccount.html
+++ b/she_codes_news/users/templates/users/createAccount.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="hero">
+    <h1>Hello Future Author</h1>
+</div>
 <h2>Create Account</h2>
 <form method="post">
     {% csrf_token %}
