--- a/she_codes_news/users/templates/users/profile.html
+++ b/she_codes_news/users/templates/users/profile.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Profile</h2>
 <div class="container">
-    <h2>Profile</h2>
+    <p>Hi {{ user }}</p>
     <p>Username: {{  user  }}</p>
     <p>Email: {{  user.email  }}</p>
 </div>
