--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -87,7 +87,7 @@
     color: var(--dark-font);
 }
 
-@media (min-device-width: 320px) and (max-device-width: 480px){
+@media  screen and (max-width: 600px) {
     #latest-stories {
         display: grid;
         grid-template-columns: 1fr;
