--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -10,6 +10,13 @@
         <img src="{{ story.story_img }}">
         {{ story.content|linebreaks }}
     </div>
+    <div>
+        {% if request.user.is_authenticated %}
+        <a href="{% url 'news:edit' story.id %}">Edit Story</a>
+        <a href="{% url 'news:delete' story.id %}">Delete Story</a>
+    {% else %}
+    {% endif %}
+    </div>
 </div>
 
 {% endblock %}
