--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -8,7 +8,12 @@
 <h2>Latest News</h2>
 
 <div id ="categories">
-    
+    {% if categories %}
+        {% for category in categories %}
+            {% include "./Category.html" with category=category}
+        {% endfor %}
+        {% else %}
+        {% endif %}
 </div>
 
     <div id="latest-stories">
