--- a/she_codes_news/news/templates/news/deleteStory.html
+++ b/she_codes_news/news/templates/news/deleteStory.html
@@ -3,14 +3,11 @@
 
 {% block stylesheets %} <link rel="stylesheet" type="text/css" href="{% static 'news/styles.css' %}"> {% endblock %} {% block content %}
 
-<section class="form-section">
-    <h1>Are you sure you want to delete?</h1>
-    {{ newsstory.title }}
-    <form method="POST" action="#">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Delete Story</button>
-    </form>
-</section>
+<h2>Delete</h2>
+<form action="" method="post" enctype="">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" value="submit">
+</form>
 
 {% endblock %}
