--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -5,26 +5,22 @@
 
 {% block content %}
 
-<h2>Latest News</h2>
-
-<div>
-    <section>
-        <h2>News Categories</h2>
-        <ul>
-            {% for category in categories %}
-                {% if category %}
-                    <li><a href="{% url 'news:categorydetail' category %}">{{ category }}</a></li>
-                {% endif %}
-            % else %}
-                    <p>No categories are available.</p>
+<!-- 
+<container>
+    <section class="category-align">
+        <a href="{% url 'news:category' %}"><h2>Categories</h2></a>
+        {% if category_list %}
+            {% for Category in category_list %}
+            <ul>
+            <li><a href="{% url 'news:categorydetail' Category %}">{{ category }}</a></li></ul>
             {% endfor %}
+        {% else %}
+            <p>No categories are available.</p>
+        {% endif %}          
+    </section>
+</container> -->
 
-        
-        </ul>          
-
-    </div>
-</section>
-
+<h2>Latest News</h2>
     <div id="latest-stories">
         {% if latest_stories %}
             {% for story in latest_stories %}
