--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -10,11 +10,11 @@
     object-fit: cover;
 }
 
-#categories {
+/* #categories {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-}
+} */
 
 #latest-stories {
     display: grid;
@@ -22,51 +22,8 @@
     grid-template-rows: 1fr 1fr;
     gap: 1px 1px;
     grid-template-areas: "left-1 right-1" "left-2 right-2" "left-3 right-3";
-    /* max-height: 500px; */
 }
 
-/* #story-card-1 {
-    grid-area: left-1 right-1;
-}
-
-#story-card-2 {
-    grid-area: left-2 right-2;
-}
-
-#story-card-3 {
-    grid-area: left-3 right-3;
-}
-
-#story-card-4 {
-    grid-area: left-3 right-3;
-} */
-
-#story-card-2 a,
-#story-card-3 a,
-#story-card-4 a {
-    width: 100%;
-    height: 100%;
-}
-
-#story-card-2 .story-card-text h3,
-#story-card-3 .story-card-text h3,
-#story-card-4 .story-card-text h3 {
-    font-size: 16px;
-}
-
-#story-card-2 .story-card-text h4,
-#story-card-3 .story-card-text h4,
-#story-card-4 .story-card-text h4 {
-    font-size: 12px;
-}
-
-/* #story-card-2 img,
-#story-card-3 img,
-#story-card-4 img {
-    width: 33%;
-    height: 100%;
-    margin-right: 5px;
-} */
 
 #all-stories {
     display: flex;
@@ -91,12 +48,4 @@
 
 #title {
     color: var(--dark-font);
-}
-
-@media  screen and (max-width: 600px) {
-    #latest-stories {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-}
 }
