--- a/she_codes_news/news/static/news/styles.css
+++ b/she_codes_news/news/static/news/styles.css
@@ -36,13 +36,21 @@
     flex-grow: 1;
 }
 
+#story-wrapper {
+    display: flex;
+    border: 1px solid black;
+    margin: 50px;
+}
+
 #story-content {
-    text-align: justify;
+    flex: 1;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #story-content img {
-    float: right;
-    margin: 0 0 10px 10px;
     width: 50%;
 }
 
