--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -1,23 +1,25 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block stylesheets %} <link rel="stylesheet" type="text/css" href="{% static 'news/styles.css' %}"> {% endblock %} {% block content %}
+{% block stylesheets %}
+<link rel="stylesheet" type="text/css" href="{% static 'news/styles.css' %}"> {% endblock %} {% block content %}
 
 <div id="story-wrapper">
-    <h2>{{ story.title }}</h2>
-    <a href="{% url 'news:author' story.author.id %}"><h4>{{ story.author }}</h4></a>
-    <h4>Category: {{ story.category }}</h4>
     <div id="story-content">
+        <h2>{{ story.title }}</h2>
+        <a href="{% url 'news:author' story.author.id %}">
+            <h4>{{ story.author }}</h4>
+        </a>
+        <h4>Category: {{ story.category }}</h4>
         <img src="{{ story.story_img }}">
         {{ story.content|linebreaks }}
-    </div>
-    <div>
+
         {% if request.user.is_authenticated %}
         <a href="{% url 'news:edit' story.id %}">Edit Story</a>
         <a href="{% url 'news:delete' story.id %}">Delete Story</a>
-    {% else %}
-    {% endif %}
-    </div>
-</div>
+        {% else %}
+        {% endif %}
 
-{% endblock %}
+    </div>
+
+    {% endblock %}
