--- a/she_codes_news/users/templates/users/profile.html
+++ b/she_codes_news/users/templates/users/profile.html
@@ -4,7 +4,8 @@
 <h2>Profile</h2>
 <div class="container">
     <p>Hi {{ user }}</p>
-    <p>Username: {{  user  }}</p>
-    <p>Email: {{  user.email  }}</p>
+    <p>Username: {{ user }}</p>
+    <p>Email: {{ user.email }}</p>
+    <p>Stories: {{ user.stories }}</p>
 </div>
 {% endblock %}
