--- a/she_codes_news/users/templates/users/profile.html
+++ b/she_codes_news/users/templates/users/profile.html
@@ -6,6 +6,6 @@
     <p>Hi {{ user }}</p>
     <p>Username: {{ user }}</p>
     <p>Email: {{ user.email }}</p>
-    <p>Stories: {{ user.stories }}</p>
+    <p>Stories: {{ story.author }}</p>
 </div>
 {% endblock %}
