--- a/she_codes_news/news/templates/news/story.html
+++ b/she_codes_news/news/templates/news/story.html
@@ -11,7 +11,7 @@
             <h4>{{ story.author }}</h4>
         </a>
         <h4>Category: {{ story.category }}</h4>
-        <img src="{{ story.story_img }}">
+        <img src="{{ story.image }}">
         {{ story.content|linebreaks }}
 
         {% if request.user.is_authenticated %}
